--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.4'
 	id 'io.spring.dependency-management' version '1.1.0'
+//	id 'com.google.cloud.tools.jib' version '3.3.1'
 }
 
 group = 'com.jaedam'
@@ -21,3 +22,15 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+//
+//jib {
+//	from {
+//	}
+//	to {
+//		image = "sepiro2000/hello-jib"
+//		tags = ["latest"]
+//	}
+//	container {
+//		jvmFlags = ["-Xms128m", "-Xmx128m"]
+//	}
+//}
