코드빌드 테스트~!! 빌드수정

--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -9,6 +9,7 @@ phases:
       - echo Nothing to do in the pre_build phase...
       - pwd
       - ls -al
+      - docker ps --all
   build:
     commands:
       - echo Build started on `date`
