코드빌드 테스트~!! 도커 설치

--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       java: corretto17
     commands:
       - echo install docker
-      - yum update
+      - yum update -y
       - yum install -y docker.io
   pre_build:
     commands:
