--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
       - echo install docker
       - yum update -y
-      - yum install -y docker.io
+      - yum -y install docker-ce docker-ce-cli containerd.io
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
