--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -6,6 +6,10 @@ phases:
       java: corretto17
     commands:
       - echo install docker
+      - yum -y update
+      - yum install -y yum-utils
+      - yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+      - yum-config-manager --enable docker-ce-nightly
       - yum -y install docker-ce docker-ce-cli containerd.io
   pre_build:
     commands:
