코드빌드 테스트~!! docker 버전 출력

--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -10,6 +10,7 @@ phases:
       - pwd
       - ls -al
       - aws --version
+      - docker --version
   build:
     commands:
       - echo Build started on `date`
