코드빌드 테스트~!! docker info 출력

--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - pwd
       - ls -al
       - aws --version
-      - docker --version
+      - docker info
   build:
     commands:
       - echo Build started on `date`
