--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -10,6 +10,7 @@ phases:
       - pwd
       - ls -al
       - aws --version
+      - sudo systemctl start docker
       - docker info
   build:
     commands:
