--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -10,7 +10,9 @@ phases:
       - pwd
       - ls -al
       - aws --version
-      - systemctl start docker
+      - cat /etc/os-release
+      - docker run --privileged -d --name mycentos7 centos:7 /sbin/init
+      - sudo systemctl start docker
       - docker info
   build:
     commands:
